Fixed overflow issues on mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import './normalize.css';
+@import "./normalize.css";
 
 :root {
   --color-primary: #2584ff;
@@ -10,6 +10,7 @@
   --color-border: #ccc;
   --border-radius: 30px;
 }
+
 
 *,
 *::after,
@@ -33,6 +34,7 @@ body {
   font-size: 2.4rem;
   line-height: 1.5;
   color: var(--color-body);
+  overflow-x: hidden;
 }
 
 h1,
@@ -353,7 +355,7 @@ a {
 /* Plans */
 
 .plan {
-  transition: transform .2s ease-out;
+  transition: transform 0.2s ease-out;
 }
 
 .plan__name {
@@ -644,8 +646,7 @@ a {
 
 .block--dark h1,
 .block--dark h2,
-.block--dark h3
-{
+.block--dark h3 {
   color: #fff;
 }
 
@@ -708,15 +709,15 @@ a {
 
 .nav__brand {
   transform: translateY(5px);
+  width: 230px;
+
 }
 
 .nav__brand img {
-  width: 70%;
-  height: 50%;
-  margin-top: 2rem;
+  width: 100%;
+  height: 100%;
   margin-left: 1rem;
 }
-
 
 @media screen and (min-width: 768px) {
   .nav__toggler {
@@ -818,7 +819,7 @@ a {
   width: 100%;
 }
 
-@media screen and (min-width: 768px){
+@media screen and (min-width: 768px) {
   .feature:nth-of-type(even) .feature__content {
     order: 2;
   }
@@ -834,7 +835,7 @@ a {
   .block-showcase .grid {
     grid-template-columns: 50% 50%;
   }
-  
+
   .block-showcase__image {
     justify-self: end;
   }
@@ -887,12 +888,12 @@ a {
 .footer__copyright {
   font-size: 2.1rem;
   color: #fff;
-  opacity: .3;
+  opacity: 0.3;
 }
 
 @media screen and (min-width: 768px) {
   .footer__sections {
-    grid-template-columns: repeat(auto-fit, minmax(10rem,1fr));
+    grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
 
   .footer .collapsible__down {
